# laurus-win-tools

./: .gitignore  Directory.Build.props  Directory.Build.targets  GitVersion.yml  LICENSE  ProgramHider.sln  README.md  SoundTracker.sln  WORKLOG.md  build.ps1  fix-tooling-path.ps1  install.ps1  run-all.ps1  windows-apps-index.md
.github/workflows/: build.yml  release.yml
Models/: AdapterInfo.cs  AppConfig.cs  NetworkProfile.cs
Services/: ConfigStore.cs  NetCommands.cs  StartupManager.cs
SoundTracker.App/: AppMetadata.cs  Program.cs  RecentActivityForm.cs  SoundTracker.App.csproj  TooltipFormatter.cs  TrayApplicationContext.cs  TrayIconRenderer.cs
SoundTracker.App/Audio/: AudioActivityEventArgs.cs  AudioSessionMonitor.cs  AudioSessionPoller.cs  CoreAudioInterop.cs  IAudioSessionSource.cs
SoundTracker.App/Diagnostics/: AppLog.cs
SoundTracker.App/History/: AudioActivityHistoryStore.cs  AudioActivityTimeline.cs
SoundTracker.App/Processes/: ProcessNameResolver.cs
SoundTracker.SmokeTests/: Program.cs  SoundTracker.SmokeTests.csproj
UI/: Icons.cs  MainForm.cs  Theme.cs
UI/Controls/: FlatButton.cs
app/ProgramHider/: ActiveWindowInspectorForm.cs  ActiveWindowTracker.cs  (+22 more)
apps/SoundTracker/archive/rust-legacy/: Cargo.toml  README.md
apps/SoundTracker/archive/rust-legacy/.cargo/: config.toml
archive/legacy-rust-v0.0.1/: Cargo.toml  build.ps1
docs/: CHANGELOG.md  design-v0.1.0.md  dotnet8-migration.md  testing.md  user-guide.md  work-log.md  work-plan.md
tools/: smoke-test-powershell-window.ps1  smoke-test-release-startup.ps1  verify-release.ps1
(+288 files in other folders)
