[package]
name = "sound-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
]}

[build-dependencies]
embed-resource = "2.4"

[profile.release]
lto = true
strip = true
opt-level = "z"
